[gd_scene load_steps=14 format=3 uid="uid://bmaqnjstdio8f"]

[ext_resource type="Script" path="res://Enemies/cronmiean.gd" id="1_mwh0u"]
[ext_resource type="Texture2D" uid="uid://c26qj5k6ra6nm" path="res://images/enemies/cronmiean/walk.png" id="2_0f2p3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hx45g"]
radius = 5.5
height = 18.0

[sub_resource type="AtlasTexture" id="AtlasTexture_vsigu"]
atlas = ExtResource("2_0f2p3")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrr22"]
atlas = ExtResource("2_0f2p3")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnwju"]
atlas = ExtResource("2_0f2p3")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbics"]
atlas = ExtResource("2_0f2p3")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u26rb"]
atlas = ExtResource("2_0f2p3")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ymjv"]
atlas = ExtResource("2_0f2p3")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_17nuv"]
atlas = ExtResource("2_0f2p3")
region = Rect2(160, 0, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_o0hk7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsigu")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_nrr22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnwju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbics")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u26rb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ymjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17nuv")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_msmcy"]
radius = 298.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o48k2"]
radius = 7.99986
height = 49.9997

[node name="cronmiean" type="CharacterBody2D"]
top_level = true
scale = Vector2(2, 2)
collision_layer = 5
collision_mask = 5
script = ExtResource("1_mwh0u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -5.5)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_hx45g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(7.10543e-15, -26.5)
scale = Vector2(0.802083, 0.822917)
sprite_frames = SubResource("SpriteFrames_o0hk7")
animation = &"walk"

[node name="EnemyVision" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyVision"]
shape = SubResource("CircleShape2D_msmcy")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-0.5, -24.5)
rotation = 3.14131
shape = SubResource("CapsuleShape2D_o48k2")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -22.5
offset_top = -65.5
offset_right = 23.5
offset_bottom = -58.5
step = 1.0
show_percentage = false

[connection signal="body_entered" from="EnemyVision" to="." method="_on_enemy_vision_body_entered"]
[connection signal="body_exited" from="EnemyVision" to="." method="_on_enemy_vision_body_exited"]
